--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -7,6 +7,12 @@
     display: flex
     justify-content: space-between
     align-items: center
+    padding: 18px 0
+.menu-navbar 
+    display: flex
+    justify-content: space-between
+    width: 360px
+    align-items: center
 
 .menu-lists 
     display: flex
