--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -7,3 +7,30 @@
 .menu-navbar a 
     text-decoration: none
     color: #fff
+
+.select-language
+    width: 70px
+    background-color: #4cb1ca
+    border: none
+    outline: none
+    color: #fff
+    appearance: none
+    background: url('../img/arrow.png') no-repeat 94% 50% #4cb1ca
+
+.select-currency
+    width: 70px
+    background-color: #4cb1ca
+    border: none
+    outline: none
+    color: #fff
+    appearance: none
+    background: url('../img/arrow.png') no-repeat 50% 50% #4cb1ca
+
+.line 
+    border: none
+    border-right: 1px solid #fff
+    height: 12px
+
+.menu-lists label 
+    margin-right: 4px
+    opacity: 0.8
