--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -34,3 +34,29 @@
 .menu-lists label 
     margin-right: 4px
     opacity: 0.8
+
+.search-field form 
+  position: relative
+  width: 300px
+  margin: 0 auto
+
+.search-field input 
+  width: 175px
+  height: 26px
+  padding-left: 6px
+  border: 1px solid #7BA7AB
+  outline: none
+  color: #c6c6c6
+  
+button 
+  position: absolute
+  top: 6px
+  left: 155px
+  width: 15px
+  height: 15px
+  border: none
+  background: url('../img/search-icon.png') no-repeat center center
+  cursor: pointer
+
+.search-field input::-ms-clear
+    display: none
