--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Open Sans Light';
-    src: url('../fonts/OpenSans-Light.eot');
+    src: url('cOpenSans-Light.eot');
     src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
     url('../fonts/OpenSans-Light.woff') format('woff'),
     url('../fonts/OpenSans-Light.ttf') format('truetype');
@@ -18,10 +18,25 @@
     font-style: normal;
     }
 
+
+@font-face {
+    font-family: 'Open Sans Bold';
+    src: url('../fonts/OpenSans-Bold.eot');
+    src: url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Bold.woff') format('woff'),
+    url('../fonts/OpenSans-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    }
+
 @mixin light {
     font-family: 'Open Sans Light', sans-serif;
 }
 
 @mixin  regular {
     font-family: 'Open Sans Regular', sans-serif;
+}
+
+@mixin  bold {
+    font-family: 'Open Sans Bold', sans-serif;
 }
