--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -8,12 +8,25 @@
     justify-content: space-between
     align-items: center
     padding: 18px 0
-    
+
 .menu-navbar 
     display: flex
     justify-content: space-between
-    width: 360px
+    width: 35%
     align-items: center
 
 .menu-lists 
     display: flex
+
+.buttons 
+    display: flex
+    width: 34%
+    justify-content: space-between
+    align-items: center
+
+.sub-menu 
+    display: flex
+    justify-content: space-between
+    width: 34%
+    
+    
