add section-list-of-consulting-services-small fix adaptive slider

--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -3,6 +3,7 @@
 @import 'sections/section-subheader';
 @import 'sections/section-consult';
 @import 'sections/section-list-of-consulting-services';
+@import 'sections/section-list-of-consulting-services-small';
 @import 'sections/section-slider';
 @import 'sections/section-our-advantages';
 @import 'sections/section-download-book-and-photo-whith-us';
