--- a/src/scss/sections/_section-consult.scss
+++ b/src/scss/sections/_section-consult.scss
@@ -1,5 +1,6 @@
 .section-consult {
   background-color: #f7ffff;
+  padding-bottom: 10px;
 }
 
 .block-consult {
@@ -17,6 +18,8 @@
 @media (max-width: 1439px) {
   .block-consult {
     width: 80%;
+    font-size: 30px;
+    text-align: center;
   }
 }
 
@@ -24,7 +27,6 @@
 @media (max-width: 1279px) {
   .block-consult {
     font-size: 24px;
-    text-align: center;
   }
 }
 
