--- a/src/scss/sections/_section-our-advantages.scss
+++ b/src/scss/sections/_section-our-advantages.scss
@@ -116,19 +116,37 @@
   }
 }
 
-@media (max-width: 1439px) {
+@media (max-width: 1279px) {
   .section-our-advantages-header {
     font-size: 54px;
   }
-}
 
-@media (max-width: 1279px) {
   .section-our-advantages-header {
     font-size: 36px;
     text-align: center;
     margin: 0 auto;
   }
+
+  .block-with-cards {
+    width: 80%;
+  }
+
+  .subitem-card-text {
+    height: 180px;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .item-card {
+    min-height: 340px;
+    width: 48%;
+  }
+
+  .item-card-text {
+    margin-top: 70px;
+  }
 }
+
 
 @media (min-width: 767px) and (max-width: 1023px) {
   .item-card-text {
@@ -136,7 +154,7 @@
   }
 
   .subitem-card-text {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
 
@@ -161,7 +179,7 @@
   }
 
   .item-card {
-    width: 100%;
+    width: 80%;
     margin: 0 auto 30px;
     padding: 5px;
   }
@@ -173,5 +191,21 @@
 
   .subitem-card-content {
     padding: 5px;
+  }
+}
+
+@media (max-width: 767px) {
+  .item-card {
+    width: 90%;
+  }
+}
+
+@media (max-width: 499px) {
+  .item-card {
+    width: 100%;
+  }
+
+  .subitem-card-text {
+    font-size: 12px;
   }
 }
