--- a/src/scss/sections/_popup.scss
+++ b/src/scss/sections/_popup.scss
@@ -18,7 +18,7 @@
     border-radius: 10px;
     margin: 20px auto;
     &-inner {
-    position: relative;
+      position: relative;
     }
     &:before {
       content: "";
@@ -29,7 +29,11 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background-image: linear-gradient(162.65deg, rgba(255, 255, 255, 0.75) 19.59%, rgba(54, 187, 206, 0.36) 101.76%);
+      background-image: linear-gradient(
+        162.65deg,
+        rgba(255, 255, 255, 0.75) 19.59%,
+        rgba(54, 187, 206, 0.36) 101.76%
+      );
     }
     &-text {
       padding: 110px 0px 43px 0px;
@@ -76,7 +80,7 @@
       font-size: 18px;
       line-height: 27px;
       color: #828282;
-      
+
       width: 100%;
     }
   }
@@ -102,4 +106,51 @@
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+@media (max-width: 1279px) {
+  .popup {
+    &-content {
+      height: 580px;
+      &-text {
+        font-size: 34px;
+      }
+      &-form input {
+        width: 80%;
+      }
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .popup {
+    &-content {
+      width: 60%;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .popup {
+    &-content {
+      width: 90%;
+      &-form-block-for-checkbox {
+        width: 80%;
+        margin: auto;
+      }
+    }
+  }
+}
+
+@media (max-width: 399px) {
+  .popup {
+    &-content {
+      &-form {
+        width: 300px;
+      }
+      &-text {
+        font-size: 30px;
+      }
+    }
+  }
 }
